org.omg.kerml.xpect.tests/src/org/omg/kerml/xpect/tests/validation/SimpleImportTests_ImportInHierarchy.kerml.xt
//* 
XPECT_SETUP org.omg.kerml.xpect.tests.validation.KerMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.kerml"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.kerml"}
			}
		}
	}
END_SETUP 
*/

// XPECT noErrors ---> ""
package test{
	class A{
		import test::*;
		class a{}
	}
}
